--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,40 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31,085</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">36,260</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">commonFunctions.BrandFilter</td><td><a href="#m0">brandFilter</a></td><td rowspan="1">1750246032717</td><td rowspan="1">15542</td></tr><tr class="passedodd"><td rowspan="1">commonFunctions.PriceFilter</td><td><a href="#m1">priceFilter</a></td><td rowspan="1">1750246049189</td><td rowspan="1">2236</td></tr><tr class="passedeven"><td rowspan="1">commonFunctions.RatingFilter</td><td><a href="#m2">ratingFilter</a></td><td rowspan="1">1750246048259</td><td rowspan="1">926</td></tr><tr class="passedodd"><td rowspan="1">commonFunctions.SearchProduct</td><td><a href="#m3">searchProduct</a></td><td rowspan="1">1750246029532</td><td rowspan="1">3179</td></tr><tr class="passedeven"><td rowspan="1">testRunner.Runner</td><td><a href="#m4">kickStart</a></td><td rowspan="1">1750246029519</td><td rowspan="1">7</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">commonFunctions.BrandFilter</td><td><a href="#m0">brandFilter</a></td><td rowspan="1">1750247738031</td><td rowspan="1">21575</td></tr><tr class="failedodd"><td rowspan="1">commonFunctions.PriceFilter</td><td><a href="#m1">priceFilter</a></td><td rowspan="1">1750247759631</td><td rowspan="1">11</td></tr><tr class="failedeven"><td rowspan="1">commonFunctions.RatingFilter</td><td><a href="#m2">ratingFilter</a></td><td rowspan="1">1750247759613</td><td rowspan="1">13</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">commonFunctions.SearchProduct</td><td><a href="#m3">searchProduct</a></td><td rowspan="1">1750247733992</td><td rowspan="1">4033</td></tr><tr class="passedodd"><td rowspan="1">testRunner.Runner</td><td><a href="#m4">kickStart</a></td><td rowspan="1">1750247733969</td><td rowspan="1">11</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">commonFunctions.BrandFilter#brandFilter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">commonFunctions.PriceFilter#priceFilter</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Price filter now applied Successfully; minimum price is 2000/-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">commonFunctions.RatingFilter#ratingFilter</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Rating filter (above 4 stars) applied successfully.</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">commonFunctions.BrandFilter#brandFilter</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Brand filter failed for brand: Crocs - Error communicating with the remote browser. It may have died.
+Build info: version: &apos;4.24.0&apos;, revision: &apos;748ffc9bc3&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.15&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [4ceb3e6fff6dcdbf514cc1777f3b168f, findElement [using, value]]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.104, chrome: {chromedriverVersion: 137.0.7151.119 (e0ac9d12dff..., userDataDir: C:\Users\MEGHALA\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50864}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50864/devtoo..., se:cdpVersion: 137.0.7151.104, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 4ceb3e6fff6dcdbf514cc1777f3b168f
+	at commonFunctions.BrandFilter.brandFilter(BrandFilter.java:67)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">commonFunctions.PriceFilter#priceFilter</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Failed to apply price filter.</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Price filter failed to apply: Error communicating with the remote browser. It may have died.
+Build info: version: &apos;4.24.0&apos;, revision: &apos;748ffc9bc3&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.15&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [4ceb3e6fff6dcdbf514cc1777f3b168f, findElement [using, value]]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.104, chrome: {chromedriverVersion: 137.0.7151.119 (e0ac9d12dff..., userDataDir: C:\Users\MEGHALA\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50864}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50864/devtoo..., se:cdpVersion: 137.0.7151.104, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 4ceb3e6fff6dcdbf514cc1777f3b168f
+	at commonFunctions.PriceFilter.priceFilter(PriceFilter.java:50)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">commonFunctions.RatingFilter#ratingFilter</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Falied to apply rating filter.</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Rating filter could not be applied: Error communicating with the remote browser. It may have died.
+Build info: version: &apos;4.24.0&apos;, revision: &apos;748ffc9bc3&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.15&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [4ceb3e6fff6dcdbf514cc1777f3b168f, findElement [using, value]]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 137.0.7151.104, chrome: {chromedriverVersion: 137.0.7151.119 (e0ac9d12dff..., userDataDir: C:\Users\MEGHALA\AppData\Lo...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50864}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50864/devtoo..., se:cdpVersion: 137.0.7151.104, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 4ceb3e6fff6dcdbf514cc1777f3b168f
+	at commonFunctions.RatingFilter.ratingFilter(RatingFilter.java:41)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">commonFunctions.SearchProduct#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">testRunner.Runner#kickStart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
